# bluedata-apiserver-extension

./: .gitignore  BUILD.bazel  Dockerfile.apiserver  Dockerfile.controller  Dockerfile.docs  Dockerfile.install
charts/bluedata-utility/: Chart.yaml  values.yaml
charts/bluedata-utility/templates/: bluedatacluster.yaml
cmd/apiserver/: main.go
cmd/controller-manager/: main.go
cmd/installer/: main.go
demo/: create_user_contexts.sh  role-dev.yaml  role-prod.yaml
docs/examples/bluedatacluster/: bluedatacluster.yaml
epic/: controller-manager.yaml  epic-3.4-176-namespace-template.yaml  epic-3.4-178-namespace-template.yaml  get_token.sh  resource-quota-for-dev.yaml  resource-quota-for-prod.yaml  resource-quota-template.yaml  setup_namespace.sh  setup_quota.sh
epic/demo/: add_users_to_kube_config.sh  role-dev.yaml  role-prod.yaml  rolebinding-dev.yaml  rolebinding-prod.yaml
pkg/apis/: doc.go  zz_generated.kubebuilder.go
pkg/apis/bluedata/: doc.go  zz_generated.deepcopy.go  zz_generated.defaults.go  (+1 more)
pkg/controller/: zz_generated.kubebuilder.go
pkg/openapi/: openapi_generated.go
sample/: bluedatacluster.yaml  tenant1_utility.yaml  tenant1_utility2.yaml  utility.yaml  utility3-4.yaml  utility3.yaml  utility4.yaml
sample/bluedata/: utility.yaml
sample/bluedata-system/: utility.yaml
sample/dev/: 2.yaml  3.yaml  dev_utility.yaml
sample/ns1/: ns1_utility.yaml  ns1_utility2.yaml
sample/ns2/: ns2_utility.yaml
sample/prod/: 2.yaml  prod_utility.yaml
sample/tenant1/: tenant1_utility2.yaml
sample/tenant2/: .tenant2_utility.yaml.swp  tenant2_utility.yaml
(+31 files in other folders)
